<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="8dp"
        android:background="@color/dark"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:alpha="0.8"
                android:focusable="false"
                android:fontFamily="@font/cyberpunk"
                android:text="@string/downloading"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:baselineAligned="false">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/value"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/file_size"
                            android:textColor="@color/gray"
                            android:textSize="15sp"
                            android:fontFamily="@font/cyberpunk"/>
                        <TextView
                            android:id="@+id/percent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/download_percent"
                            android:textColor="@color/gray"
                            android:textSize="15sp"
                            android:fontFamily="@font/cyberpunk"/>
                    </LinearLayout>
                    <ProgressBar
                        android:id="@+id/progress"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:indeterminate="false"
                        style="?android:progressBarStyleHorizontal"/>
                </LinearLayout>
                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/checkbox"
                    android:textColor="@color/gray"
                    android:alpha="0.8"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="29dp"
            android:layout_marginRight="29dp"
            android:padding="8dp"
            android:background="#424242"
            android:orientation="horizontal"
            android:alpha="0.5" />
        <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/b1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/pause_download_dialog"
                    android:textSize="16sp"
                    android:alpha="0.8"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/cyberpunk" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/line"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="9dp"
                android:alpha="0.5"
                android:background="#424242"
                android:orientation="vertical"
                android:padding="8dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/b2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/cancel_download_dialog"
                    android:textSize="16sp"
                    android:alpha="0.8"
                    android:textColor="@color/red"
                    android:fontFamily="@font/cyberpunk" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>