<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".offline.OfflineActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp">
            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginEnd="2dp"
                android:src="@drawable/arrow_back"
                android:scaleType="centerInside"
                android:adjustViewBounds="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:alpha="0.8"
                android:text="@string/available_offline"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/cyberpunk"/>
            <LinearLayout
                android:visibility="gone"
                android:id="@+id/search_holder"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/search"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:hint="@string/search"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textColorHint="#ff757575"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:fontFamily="@font/cyberpunk"
                    android:background="@color/dark"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/close_holder"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/close"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/close"
                    android:scaleType="centerInside"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/todo" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">
            <HorizontalScrollView
                android:visibility="gone"
                android:id="@+id/scroll1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:id="@+id/slot1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp">
                        <TextView
                            android:id="@+id/textview_slot1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:alpha="0.8"
                            android:text="@string/applications"
                            android:textSize="15sp"
                            android:textColor="@color/gray"
                            android:fontFamily="@font/cyberpunk"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/slot2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp">
                        <TextView
                            android:id="@+id/textview_slot2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:alpha="0.8"
                            android:text="@string/games"
                            android:textSize="15sp"
                            android:textColor="@color/gray"
                            android:fontFamily="@font/cyberpunk"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/slot3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:paddingLeft="4dp"
                        android:paddingRight="4dp">
                        <TextView
                            android:id="@+id/textview_slot3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:alpha="0.8"
                            android:text="@string/downloaded"
                            android:textSize="15sp"
                            android:textColor="@color/gray"
                            android:fontFamily="@font/cyberpunk"/>
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.bosphere.fadingedgelayout.FadingEdgeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:fel_edge="bottom|top"
                app:fel_size_top="40dp"
                app:fel_size_left="0dp"
                app:fel_size_right="0dp"
                app:fel_size_bottom="40dp">
                <ListView
                    android:id="@+id/listview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:choiceMode="none"/>
            </com.bosphere.fadingedgelayout.FadingEdgeLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>