<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/light_dark">
        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp"
                android:gravity="center"
                android:background="@color/dark">
                <ImageView
                    android:id="@+id/imageview1"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:focusable="true"
                    android:src="@drawable/update"
                    android:scaleType="centerInside"
                    android:adjustViewBounds="true"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/linear5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="8dp">
                <TextView
                    android:id="@+id/textview1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:focusable="true"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/cyberpunk"/>
                <TextView
                    android:id="@+id/textview2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="8dp"
                    android:focusable="true"
                    android:textSize="15sp"
                    android:textColor="#ff9e9e9e"
                    android:fontFamily="@font/cyberpunk"/>
                <LinearLayout
                    android:id="@+id/linear6"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:background="@color/light_dark"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:gravity="center">
                <LinearLayout
                    android:id="@+id/button_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:visibility="gone"
                        android:id="@+id/size"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingStart="0dp"
                        android:paddingEnd="8dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:focusable="true"
                        android:textSize="13sp"
                        android:textColor="#ff9e9e9e"
                        android:fontFamily="@font/cyberpunk"/>
                    <Button
                        android:visibility="gone"
                        android:id="@+id/button1"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:focusable="true"
                        android:text="@string/cancel"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/cyberpunk"
                        android:background="@color/light_dark"/>
                    <TextView
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:paddingStart="8dp"
                        android:paddingEnd="10dp"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:focusable="true"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/cyberpunk" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/download_holder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:baselineAligned="false">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/value"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/file_size"
                                android:textColor="@color/gray"
                                android:textSize="15sp"
                                android:fontFamily="@font/cyberpunk"/>
                            <TextView
                                android:id="@+id/percent"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/download_percent"
                                android:textColor="@color/gray"
                                android:textSize="15sp"
                                android:fontFamily="@font/cyberpunk"/>
                        </LinearLayout>
                        <ProgressBar
                            android:id="@+id/progress"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:indeterminate="false"
                            style="?android:progressBarStyleHorizontal"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/image_holder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="5dp"
                        android:paddingBottom="5dp">
                        <ImageView
                            android:id="@+id/image"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:src="@drawable/pause"
                            android:scaleType="centerInside"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/todo" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>